# rougelike_rust_specs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  savegame.json
raws/: faction_table.json  items.json  loot_tables.json  mobs.json  props.json  spawn_table.json  spells.json  weapon_traits.json
src/: camera.rs  components.rs  gamelog.rs  gamesystem.rs  gui.rs  main.rs  map.rs  player.rs  prelude.rs  random_table.rs  rect.rs  rng.rs  spawner.rs
src/ai/: adjacent_ai_system.rs  approach_ai_system.rs  chase_ai_system.rs  default_move_system.rs  encumbrance_system.rs  flee_ai_system.rs  initiative_system.rs  mod.rs  quipping.rs  turn_status.rs  visible_ai_system.rs
src/effects/: damage.rs  hunger.rs  mod.rs  movement.rs  particles.rs  targeting.rs  triggers.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/gui/: cheat_menu.rs  hud.rs  item_render.rs  mod.rs  tooltip.rs  vendor.rs
src/map/: camera.rs  dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: area_starting_points.rs  common.rs  mod.rs  room_based_stairs.rs  room_based_starting_position.rs  room_corner_rounding.rs  room_exploder.rs  rooms_corridors_bsp.rs  rooms_corridors_dogleg.rs
src/raws/: mod.rs
src/spatial/: mod.rs
src/state/: cheat_actions.rs  mod.rs  runstate.rs  vendor_actions.rs
src/systems/: animal_ai_system.rs  bystander_ai_system.rs  damage_system.rs  hunger_system.rs  inventory_system.rs  lighting_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  movement_system.rs  particle_system.rs  ranged_combat_system.rs  (+3 more)
(+104 files in other folders)
