[package]
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
name = "chapter-36-layers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.5.5"
rltk = {version = "^0.8.1", features = ["serde"]}

lazy_static = "^1.4.0"
serde = {version = "^1.0.136", features = ["derive"]}
serde_json = "^1.0.79"

specs = {version = "^0.17.0", features = ["serde"]}
specs-derive = "^0.4.1"
